bugfix: gRPC warmup + correct routes
